# RGB2XGA

./: CMakeLists.txt  RGB2XGA.cpp  RGB2XGAc.code-workspace  RGB_PIn.pio  ReadMe.txt  XGAPixs.pio  XGAhSync.pio  XGAvSync.pio
HVworking/: RGB2XGA.cpp  XGAPixs.pio  XGAPixs.pio.h
pioasm_build/: XGAhSync.pio.h
